--- a/help/ameh/ameh.tex
+++ b/help/ameh/ameh.tex
@@ -1,4 +1,4 @@
-\documentclass[12pt]{book}
+\documentclass[12pt,twoside,openright]{book}
 
 %\linespread{1.6}
 \usepackage{times}
@@ -9,6 +9,7 @@
 
 \usepackage{dingbat,phaistos,manfnt}
 
+\parskip 1ex
 %\usepackage{fancyhdr}
 %\pagestyle{fancy}
 %\renewcommand{\headrulewidth}{0pt}
@@ -84,9 +85,18 @@ But, owing to the uniqueness of the model system being studied in the lab, or th
 
 \hyphy\ enables you to do just about anything in the domain of phylogenetics.  This is both a blessing and a curse --- to borrow a popular phrase from C programming, it ``gives you enough rope to hang yourself with''.  While there are thousands of biologists that use the standard analyses distributed with \hyphy\ or accessed as web applications on our public computing cluster ({\it Datamonkey}), there are only a small (but growing!) number of biologists that have mastered the \hyphy\ batch language to the degree that they can write or modify scripts for their own research.  
 
-We're going to assume that you are acquainted with some of the basic concepts in computer programming.  For example, we assume that you know why one has to initialize a variable, what a logical operator is (such as `and' or `\&\&', depending on the language), and what an iterative block of code (such as for-loops) looks like.  On the other hand, we try to explain enough so that those of us who are kind of rusty can plod along.  This book is written to enable someone who is acquainted with programming to jump right into customizing or developing new models in molecular evolution using \hyphy.
+We're going to assume that you are acquainted with some of the basic concepts in \textbf{ computer programming}.  If you've {\it ever} written a program in BASIC or Pascal, then you should be okay.  For example, we assume that you know why one has to initialize a variable, what a logical operator is (such as `and' or `\&\&', depending on the language), and what an iterative block of code (such as for-loops) looks like.  On the other hand, we try to explain enough so that those of us who are kind of rusty can plod along.  This book is written to enable someone who is acquainted with programming to jump right into customizing or developing new models in molecular evolution using \hyphy.
 
-This book is {\it not} for you if you're not even remotely interested in modifying a template batch file.  You can get what you need to get done through {\it Datamonkey} or one of the items in the standard analysis menu.  We've tried our best to make the standard analyses in \hyphy\ accessible and self-explanatory.  We even have several book chapters and a rudimentary software manual that do a pretty good job of telling you what you need to know to get things done!  
+We also have to assume that you are familiar with some basic concepts in \textbf{biology}.  For example, you'd better have heard of DNA and have a general idea of its composition and function.  You should have a basic understanding of genetic mutation and natural selection.  
+
+If we \textit{don't} assume that you know about {\it any} of these things, then this is going to be a very big book!  Too bad.  We're doing this for free and doing it in our free time.  Which doesn't exist.
+
+\textbf{This book is also for you} if you are instructing a graduate-level seminar on molecular evolution and you are interested in designing a hands-on curriculum that emphasizes practical computer work.  We have tried to write this book in such a way that it could be used as a textbook to train graduate students and post-docs in advanced molecular evolution.  
+
+\textbf{This book is \textit{probably not} for you} if you're not even remotely interested in modifying a template batch file.  You can get what you need to get done through {\it Datamonkey} or one of the items in the standard analysis menu.  We've tried our best to make the standard analyses in \hyphy\ accessible and self-explanatory.  We even have several book chapters and a rudimentary software manual that do a pretty good job of telling you what you need to know to get things done!  
+
+
+
 
 
 \section {How do I get \hyphy?}
@@ -98,18 +108,28 @@ This book is {\it not} for you if you're not even remotely interested in modifyi
 
 
 
+
+
+
 \chapter {The \hyphy\ Batch Language}
 
-A batch language is a collection of application-specific function calls that make it possible to automate long and complex processes.  The \hyphy\ batch language (HBL) is an application-specific language for modeling molecular evolution.  Like nearly all  programming languages, the HBL understands conventional objects such as scalar values (the number 3.14) and arrays (the inclusive sequence of integers from 1 to 10).  Because \hyphy\ is a language for modeling molecular evolution, it also includes objects that represent multiple sequence alignments (DataSet), phylogenetic trees (Tree), and substitution rate models (Model).  These domain-specific objects are so important and elaborate that we will dedicate a chapter for each of them. 
+One of the most important features of \hyphy\ is that it has a rich batch language, because it enables you to customize an analysis to test almost any hypothesis you can imagine (and backs that up with the computing power to make it possible!).  
+
+A \textbf{batch language} is a collection of application-specific function calls that make it possible to automate long and complex processes.  A recipe for shortbread cookies is written in the batch language of kitchen appliances and utensils.  In DOS and earlier versions of Windows, files with the extension {\tt .bat} were batch files that grouped commands that could be run in sequence to accomplish a complex task.  
+
+ The \hyphy\ batch language (\textbf{HBL}) is an application-specific language for modeling molecular evolution.  Like nearly all programming languages, the HBL understands conventional objects such as scalar values (the number 3.14) and arrays (the inclusive sequence of integers from 1 to 10).  Because \hyphy\ is a language for modeling molecular evolution, it also includes objects that represent multiple sequence alignments (DataSet), phylogenetic trees (Tree), and substitution rate models (Model).  These domain-specific objects are so important and elaborate that we will dedicate a chapter for each of them. 
 
  For the time being, we're just going to get acquainted with the conventions and syntax of the HBL.  This is the `glue' that makes everything work together.
 
 
 \section {Similarities to C syntax}
 
-The HBL is modeled after the programming language C.  The following is a (non-exhaustive) list of similarities between HBL and C, for those of you that have programmed in C before and want to get a running start into coding HBL:
+The HBL is modelled after the programming language C.  This is a choice of convenience: C is a popular programming language, so many academics will have encountered it at some point in their careers; and mimicking an existing language bypasses an enormous number of design decisions that we would otherwise have to make.  If you've never written a program in C, \textbf{don't worry}!  We will be going over the HBL syntax for the remainder of this chapter (and a few other chapters besides).  
+
+The following is a (non-exhaustive) list of similarities between HBL and C, for those of you that have programmed in C before and want to get a running start into coding HBL:
 
 \begin{itemize}
+\itemsep 2pt
 \item Statements are terminated with a semi-colon (;) 
 \item Arguments are separated by commas.
 \item Blocks of code are enclosed in curly braces (\{\ldots\}). 
@@ -127,11 +147,11 @@ The HBL is modeled after the programming language C.  The following is a (non-ex
 \item Input and output are handled by functions named {\tt fscanf} and {\tt fprintf}, respectively.  However, their actual usage is differs from C (see Section \ref{io}).
 \end{itemize}
 
-If you've never written a program in C, \textbf{don't worry}!  We will be going over the HBL syntax for the remainder of this chapter (and a few other chapters besides).
+\noindent As you can see, there are plenty of similarities between the HBL and C.  However, there are also a substantial number of reasons that HBL is definitely not the same as C.  
 
-On the other hand, the HBL departs substantially from the conventions of the C language in several important respects.  First of all, \hyphy\ does not explicitly distinguish between integers and floating-point numbers.  All scalar values are handled as floating-point numbers.  Consequently, the number 1 is stored internally as a floating-point number 1.0 but displayed as 1.  
+The most basic difference is that HBL is truly a scripting language and not a low-level programming language like C.  HBL interfaces with the core \hyphy\ application that handles all of the gory details that are involved in opening a file and reading its contents, minimizing a function, or performing matrix algebra.  For example, you can define a matrix without having to explicitly allocate memory to store its contents.
 
-Second, the HBL uses {\bf dynamic typing} of variables instead of the explicit variable declaration of C.  In other words, the type of a variable is determined by its context.  The following statement:
+A more nuanced difference is that HBL uses {\bf dynamic typing} of variables instead of the explicit variable declaration of C.  In other words, the type of a variable is determined by its context.  The following statement:
 
 
 \begin{leftbar}
@@ -141,9 +161,9 @@ x = x + y;
 \end{verbatim}
 \end{leftbar}
 
-\noindent creates a floating-point variable named {\tt x} and assigns it the value 1.0, and then creates a second floating-point variable named {\tt y} and assigns it the default value of 0.  It assumes that the second variable is also floating-point because it is being added to a floating point variable.  
+\noindent creates a floating-point variable named {\tt x} and assigns it the value 1.0, and then creates a second floating-point variable named {\tt y} and assigns it the default value of 0.  It assumes that the second variable is also floating-point because it is being added to a floating point variable.   Similarly, \hyphy\ does not explicitly distinguish between integers and floating-point numbers.  All numbers are dynamically typed as floating-point numbers.  In other words, the number 1 is stored internally as a floating-point number (1.0) but displayed as `1'.  
 
-Most importantly, HBL is truly more of a scripting language than a low-level programming language like C.  That means that it is a lot more convenient to do regular tasks.  For example, you can define a matrix without having to explicitly allocate memory to store its contents.
+
 
 In the following sections, we will go over the fundamental aspects of the HBL syntax.  In the interest of giving you enough information to get a quick start, and to place the application-specific components of the HBL (such as Tree) in context, we will gloss over some of the finer details --- you can find these in the comprehensive HBL reference wiki at our website, \textbf{http:// www.hyphy.org}.  
 
@@ -209,27 +229,49 @@ Alternatively, the format string can be comprised of a single argument that tell
 
 \subsection {Number}
 
-All numerical values in \hyphy\ are stored internally as a double-precision floating point variable.  {\tt Number} objects can be manipulated with the usual arithmetic operators and transcendental functions:
+All numerical values in \hyphy\ are stored internally as a double-precision floating point variable.  {\tt Number} objects can be manipulated with a large number of operators and functions:
 
 \begin{center}
-\begin{tabular}{ll}
+\begin{tabular}{lll}
+\textbf{Syntax} & \textbf{Function}\\
 \hline
-Syntax & Function\\
-\hline
+{\tt Abs(x)} & Absolute value\\
+
+\multicolumn{2}{l}{\it Arithmetic operators}\\
 {\tt x + y} & Add\\
 {\tt x - y} & Subtract\\
 {\tt x * y} & Multiply\\
 {\tt x / y} & Divide\\
 {\tt x \$ y} & Integer divide (return the integer part of the quotient)\\
 {\tt x \% y} & Modulo operator (return the remainder of the quotient)\\
+
+\multicolumn{2}{l}{\it Transcendental functions}\\
 {\tt Exp(x)} & Exponential function\\
 {\tt Log(x)} & Natural logarithm\\
 {\tt Sin(x)} & Sine function (also {\tt Cos}, {\tt Tan}, {\tt Arctan})\\
+
+\multicolumn{2}{l}{\it Hypergeometric functions}\\
+{\tt Gamma(x)} & Gamma function, $\Gamma(x) = \int_0^{\inf}t^{z-1}e^{-t}dt$\\
+{\tt CGammaDist(x)} & Incomplete gamma function, $\Gamma(x) = \int_0^{\inf}t^{z-1}e^{-t}dt$\\
+{\tt LnGamma(x)} & Natural log of gamma function, used to avoid numerical overflow.\\
+{\tt Beta(x)} & Beta function, $B(x,y) =\int_0^1 t^{x-1} (1-t)^{y-1} dt$\\
 {\tt Erf(x)} & Error function, $\frac{2}{\sqrt{\pi}}\int_{0}^{x}\exp{-t^2}dt$\\
-{\tt Gamma(x)} & Gamma function, $\int_0^{\inf}t^{z-1}e^{-t}dt$\\
+
+\multicolumn{2}{l}{\it Probability distribution-based functions}\\
+{\tt InvChi2(x,a)} & Inverse chi-squared distribution, $f(x,a) = \frac{2^{-a/2}}{\Gamma(a/2)}x^{-a/2-1}e^{-1/(2x)}$\\
 \hline
 \end{tabular}
 \end{center}
+
+In practice, the majority of model parameters in \hyphy\ are {\tt Number} objects, such as substitution rates and branch lengths.  Because \hyphy\ is designed for hypothesis testing using phylogenies, many of these parameters must be defined in the context of a phylogeny.  When a parameter belongs to a model that is associated with a phylogeny, it must be declared to be either \textbf{global} or \textbf{local} in scope.  A globally defined variable applies to all branches of a tree, and is defined as follows:
+
+\begin{leftbar}
+\begin{verbatim}
+global a = 1; /* assign 1.0 as its initial value */
+\end{verbatim}
+\end{leftbar}
+
+
 
 
 
@@ -258,8 +300,21 @@ We often want to run a sequence of function calls many times, or run different s
 
 
 
-\chapter {Model}
 
+\chapter {Models}
+
+\hyphy\ was designed to analyze genetic sequence data by fitting models of molecular evolution.  
+
+\section {What is molecular evolution?}
+
+Molecular evolution is the study of how biological sequences evolve over time.  Biological sequences are made up of nucleotides (making up a nucleic acid) or amino acids (making up a protein) that are the product of the transcription and translation of nucleotides.  Since these elements of a sequence can assume only one of a finite number of forms, they are modelled as \textbf{discrete variables}.  Discrete variables are outcomes of a finite state space; for example, tossing a coin results in either `heads' or `tails'.  The states assumed by a variable can either map directly to the 4 nucleotides (A, C, G, and T/U) or the 20 naturally-occurring amino acids, or they can map to composite states.  The most prevalent \textbf{composite state variable} in molecular evolution is the codon, which is comprised of 3 adjacent nucleotides ({\it e.g.}, ATG) that encode a particular amino acid given a genetic code.  
+
+A genetic sequence is transmitted from a parent to its offspring 
+
+
+\section {Maximum likelihood}
+
+Likelihood is the probability of a model given data.  
 
 \chapter {Tree}
 
