--- a/help/ameh/ameh.tex
+++ b/help/ameh/ameh.tex
@@ -113,6 +113,12 @@ If we \textit{don't} assume that you know about {\it any} of these things, then 
 
 \chapter {The \hyphy\ Batch Language}
 
+\begin{quote}
+\textit{``As they say in Discworld, we are trying to unravel the Mighty Infinite using a language which was designed to tell one another where the fresh fruit was.''}\\ -- Terry Pratchett.
+\end{quote}
+
+\vspace{0.5in}
+
 One of the most important features of \hyphy\ is that it has a rich batch language, because it enables you to customize an analysis to test almost any hypothesis you can imagine (and backs that up with the computing power to make it possible!).  
 
 A \textbf{batch language} is a collection of application-specific function calls that make it possible to automate long and complex processes.  A recipe for shortbread cookies is written in the batch language of kitchen appliances and utensils.  In DOS and earlier versions of Windows, files with the extension {\tt .bat} were batch files that grouped commands that could be run in sequence to accomplish a complex task.  
@@ -303,13 +309,84 @@ We often want to run a sequence of function calls many times, or run different s
 
 \chapter {Models}
 
-\hyphy\ was designed to analyze genetic sequence data by fitting models of molecular evolution.  
+\begin{quote}
+\textit{``Remember that all models are wrong; the practical question is how wrong do they have to be to not be useful.''}\\ -- George E.~P.~Box.
+\end{quote}
+
+\vspace{0.5in}
+
+\hyphy\ was designed to analyze genetic sequence data by fitting models of molecular evolution.  In this context, a model is a set of hypotheses represented by one or more mathematical expressions that are inevitably a gross over-simplification of biological reality.  When we propose a model, we will always have to grapple with the fundamental conflict between making the model complex enough to be realistic, while simple enough to be useful.  
+
+  If we try to fit reality more closely by making the model more complex, then we are in danger of \textbf{overfitting} the data.  
+  
+  
 
 \section {What is molecular evolution?}
 
-Molecular evolution is the study of how biological sequences evolve over time.  Biological sequences are made up of nucleotides (making up a nucleic acid) or amino acids (making up a protein) that are the product of the transcription and translation of nucleotides.  Since these elements of a sequence can assume only one of a finite number of forms, they are modelled as \textbf{discrete variables}.  Discrete variables are outcomes of a finite state space; for example, tossing a coin results in either `heads' or `tails'.  The states assumed by a variable can either map directly to the 4 nucleotides (A, C, G, and T/U) or the 20 naturally-occurring amino acids, or they can map to composite states.  The most prevalent \textbf{composite state variable} in molecular evolution is the codon, which is comprised of 3 adjacent nucleotides ({\it e.g.}, ATG) that encode a particular amino acid given a genetic code.  
+Molecular evolution is the study of how biological sequences evolve over time.  Biological sequences are made up of nucleotides (making up a nucleic acid) or amino acids (making up a protein) that are the product of the transcription and translation of nucleotides.  Since these elements of a sequence can assume only one of a finite number of forms, they are modelled as \textbf{discrete variables}.  Discrete variables are outcomes of a finite state space; for example, tossing a coin results in either `heads' or `tails'.  The states assumed by a variable can either map directly to the 4 nucleotides (A, C, G, and T/U) or the 20 naturally-occurring amino acids, or they can map to composite states.  The most prevalent composite state variable in molecular evolution is the codon, which is comprised of 3 adjacent nucleotides ({\it e.g.}, ATG) that encode a particular amino acid given a genetic code\footnote{There are 64 possible codons ($4^3$) but models of codon evolution generally only consider 61 by omitting the three codons (TAA, TAG, and TGA) that encode the termination of transcription in the standard genetic code.}.  Hence, we can examine molecular evolution at whatever scale is most informative for the question at hand so long as we can define the \textbf{unit of molecular evolution}, whether this unit is a nucleotide, a codon, or the presence or absence of an entire gene. 
 
-A genetic sequence is transmitted from a parent to its offspring 
+% mutation
+
+A genetic sequence is transmitted from a parent to its offspring, but it is not transmitted intact.  As the cellular replication machinery copies the template sequence, it makes errors that either substitute one nucleotide for another (\textbf{substitution}), insert one or more additional nucleotides to produce a longer sequence (\textbf{insertion}), or skip one or more nucleotides to produce a shorter sequence (\textbf{deletion}).  In addition, the template may itself become modified.  Over time, nucleic acids are damaged from both natural processes (such as oxidation by naturally occurring byproducts of cellular metabolism) and extrinsic factors (such as ultraviolet radiation).  The cellular components that repair such damage are not completely accurate, which can result not only in nucleotide substitutions, insertions and deletions, but also large-scale and often disastrous rearrangements of large segments of the genome.
+
+Defining the unit of molecular evolution is important because we assume that these units evolve independently of one another.  In other words, we assume that evolution at one nucleotide does not influence the evolution of another nucleotide in the gene or even the entire genome.  If this assumption is very definitely wrong and the nucleotides do not evolve independently, then we need to rescale the model.  For example, the evolution of paired nucleotides in an RNA stem is highly dependent \cite{Muse:1994} so the appropriate unit of molecular evolution is the pair of nucleotides (a dinucleotide).
+
+In sum, molecular evolution is conventionally modelled as a random process in which one or more independent discrete variables change over time.  This type of process can be represented by a family of stochastic processes known as Markov chains.  
+
+
+\section {Markov chains}
+
+A Markov chain is a model that describes the random changes in a discrete variable over time.  The central assumption of a Markov chain model is that the probability that a discrete variable $Y$ is in a given state at time $t$ depends only on the most recent observation of its state at time $t-\delta t$ and no other states before then.  This assumption is extremely useful because it limits the number of parameters that we have to deal with in a model.  
+
+Imagine that you are sitting in your apartment late at night reviewing a paper and you glance out your window at the building across the street.  There's a light on over there!  How reassuring -- you're not the only one awake late at night.  A few minutes later, you glance out the window again and the light is off\footnote{For the time being, we're just obsessing about one of the windows in the building across the street.  Perhaps an attractive neighbour lives there.}.  Whether the light is on or off is a discrete variable (we assume that your neighbours don't have dimmers installed).  What is the probability that when you look out the window again after some amount of time $t$ that the light will be back on?  We can use a Markov model to make a prediction.
+
+%First, we need to introduce the concept of an \textbf{instantaneous rate}. 
+Let's suppose that the rate that your neighbour flicks the light-switch is 0.1 times / hour on average.   
+%How long do you have to wait to see this event?  We can make a prediction based on a \textbf{Poisson process} in which the time between events is modelled by the exponential distribution, $P(t) = \lambda e^{-\lambda t}$, where $\lambda$ is the instantaneous rate of the event.  
+Measuring time in units of hours, we can model the light-switch with the following rate matrix:
+
+\begin{center}
+\begin{tabular}{ccc}
+$Q = \left (
+\begin{array}{cc}
+-0.02 & 0.02\\
+0.08 & -0.08\\
+\end{array}
+\right )$
+& 
+\hfill
+&
+{\tt Q = \{\{-0.02, 0.02\},\{0.08, -0.08\}\};}\\
+\end{tabular}
+\end{center}
+
+\noindent where we are giving mathematical expressions on the left and HBL code on the right.  If the light is off at time $t_0$, then we read along the first row of $Q$; otherwise, the light is on and we read along the second row.  The first column gives the rate of change in the probability that the light is off at time $t_0+\delta t$, where rates are measured in units of time $\delta t$.  Note that the entry in the first row and first column is negative.  This is because there is a net outflow of probability mass away from the state `off' into the state `on'.  Each row in $Q$ must sum to zero; otherwise there would be a net loss or gain in the overall probability mass.  This wouldn't make sense -- like if I told you that there was a 60\% probability that a coin toss would result in heads and a 50\% probability that it would be tails.  
+
+To get the probability that the light is on after some time $t$ has elapsed, we need to take the matrix exponential of $Q$ times the number of units time $\delta t$ that have elapsed:
+
+\begin{center}
+\begin{tabular}{ccc}
+$P(t) = e^{Q t}$
+& 
+\hspace{1in}
+&
+{\tt t=0.2; P = Exp(Q*t);}\\
+\end{tabular}
+\end{center}
+
+\noindent  The {\tt Exp} function in HBL is polymorphic and will return a matrix exponential if called with a Matrix argument, and the scalar exponential if called with a Number argument.  Note that we had to set $t$ to a numerical value.  Otherwise, we would be asking \hyphy\ to do symbolic computation which it can't do!  In fact, if $t$ has never been declared then \hyphy\ would dynamically type it as the number 0 and $P$ would be equal to an identity matrix -- the probability of staying on or staying off would be 1 because no time has elapsed!  Let's get \hyphy\ to display $P$:
+
+\begin{leftbar}
+\begin{verbatim}
+>P
+{
+{    0.996039734661,  0.00396026533865}
+{   0.0158410613546,    0.984158938645}
+}
+\end{verbatim}
+\end{leftbar}
+
+\noindent After 0.2 units of time, there is a pretty small probability that a light that was off is now on (about 0.004) and a slightly larger probability that a light that was on is now off (about 0.016).  
 
 
 \section {Maximum likelihood}
@@ -317,6 +394,8 @@ A genetic sequence is transmitted from a parent to its offspring
 Likelihood is the probability of a model given data.  
 
 \chapter {Tree}
+
+% homology
 
 
 \chapter {DataSet}
